5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1712_2496.log
== TEST (2019-05-13 14:16:07) 
-- CODE:
acum = 0
x = 0

while ( x != -1):
	int(input("Digite um valor: ")
	acum = acum + x
	 
print(acum)	
-- ERROR:
File "XXXX", line 6
    acum = acum + x
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:17:28) 
-- CODE:
acum = 0
x = int(input("Digite um valor: ")

while ( x != -1):
	acum = acum + x
	 
print(acum)	
-- ERROR:
File "XXXX", line 4
    while ( x != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:17:49) 
-- CODE:
acum = 0
x = int(input("Digite um valor: ")

while ( x != -1):
	x = int(input("Digite um valor: ")
	acum = acum + x
	 
print(acum)	
-- ERROR:
File "XXXX", line 4
    while ( x != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:17:57) 
-- CODE:
acum = 0
x = int(input("Digite um valor: ")

while ( x != -1):
	
	x = int(input("Digite um valor: ")
	acum = acum + x
	 
print(acum)	
-- ERROR:
File "XXXX", line 4
    while ( x != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:23:36) 
-- CODE:
acum = 0
x = int(input("Digite um valor: ")

while ( x != -1):
	
	acum = acum + x
	x = int(input("Digite um valor: "))
	
print(acum)	
-- ERROR:
File "XXXX", line 4
    while ( x != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:23:43) 
-- CODE:
acum = 0
x = int(input("Digite um valor: ")

while( x != -1):
	
	acum = acum + x
	x = int(input("Digite um valor: "))
	
print(acum)	
-- ERROR:
File "XXXX", line 4
    while( x != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:28:56) 
-- CODE:
soma = 0
x = int(input("Digite um valor: ")

while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- ERROR:
File "XXXX", line 4
    while (x != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:29:19) 
-- CODE:
soma = 0
x = int(input("Digite um valor: "))


while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:29:40) 
-- CODE:
soma = 0
x = int(input("Digite um valor: "))


while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- EXECUTION TIME:
0.135763
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:47:48) 
-- CODE:
soma = 0
x = int(input("Digite um valor: "))

while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- EXECUTION TIME:
0.219685
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:47:49) 
-- CODE:
soma = 0
x = int(input("Digite um valor: "))

while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:48:08) 
-- CODE:
soma = 0
x = int(input("Digite um valor: "))

while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:48:09) 
-- CODE:
soma = 0
x = int(input("Digite um valor: "))

while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- EXECUTION TIME:
0.129637
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:48:09) 
-- CODE:
soma = 0
x = int(input("Digite um valor: "))

while (x != -1):
	
	soma = soma + x
	x = int(input("Digite um valor: "))
	
print( soma )
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
